2016-09-06  Natalia Portillo  <claunia@claunia.com>

	* NDIF.cs:
	* DiscImageChef.DiscImages.csproj: Adds support for Apple NDIF
	images, closes #47

	* UDIF.cs:
	* DiskCopy42.cs: Try to get and use "vers" resource from the
	Resource Fork to get ImageApplication and its version.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* CDRWin.cs: Show correct filename from filter.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* GDI.cs:
	* VDI.cs:
	* VHD.cs:
	* DIM.cs:
	* BLU.cs:
	* QED.cs:
	* UDIF.cs:
	* QCOW.cs:
	* VHDX.cs:
	* Nero.cs:
	* QCOW2.cs:
	* CDRWin.cs:
	* CopyQM.cs:
	* CPCDSK.cs:
	* VMware.cs:
	* CDRDAO.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* Parallels.cs:
	* DiskCopy42.cs:
	* Alcohol120.cs:
	* ImagePlugin.cs:
	* BlindWrite5.cs:
	* BlindWrite4.cs:
	* ZZZRawImage.cs:
	* DiscImageChef.DiscImages.csproj: Added filters.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* UDIF.cs:
	* packages.config:
	* README.txt:
	* LICENSE.txt:
	* ChangeLog.txt:
	* index.xml:
	* index.html:
	* DiscImageChef.DiscImages.csproj:
	* ns-Claunia.PropertyList.xml:
	* UID.xml:
	* UID.html:
	* NSSet.xml:
	* index.html:
	* NSData.xml:
	* NSSet.html:
	* NSDate.xml:
	* NSArray.xml:
	* NSData.html:
	* NSDate.html:
	* NSObject.xml:
	* NSNumber.xml:
	* NSString.xml:
	* NSArray.html:
	* NSObject.html:
	* NSNumber.html:
	* NSString.html:
	* NSDictionary.xml:
	* NSDictionary.html:
	* PropertyListParser.xml:
	* PropertyListParser.html:
	* XmlPropertyListParser.xml:
	* XmlPropertyListParser.html:
	* ASCIIPropertyListParser.xml:
	* BinaryPropertyListParser.xml:
	* BinaryPropertyListWriter.xml:
	* ASCIIPropertyListParser.html:
	* BinaryPropertyListWriter.html:
	* BinaryPropertyListParser.html:
	* PropertyListFormatException.xml:
	* PropertyListFormatException.html: Added support for UDIF
	images, closes #46.

2016-08-30  Natalia Portillo  <claunia@claunia.com>

	* VMware.cs:
	* DiscImageChef.DiscImages.csproj: Added support for VMware
	disk images, closes #39
